2017-03-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c: Include gvm/base/prefs.h.
	(plugin_add): Check for deprecated plugin before attempting
	to schedule it.

2017-03-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_rsa_private_decrypt): New function.

	* nasl/nasl_crypto2.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add rsa_private_decrypt().

2017-03-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* misc/bpf_share.c (print_pcap_error): New function which use
	glib to log errors.
	(bpf_open_live): Use the new function print_pcap_error instead of
	pcap_perror().

2017-03-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/network.c (host_info_init): Update documentation to match
	code changes.

2017-03-15  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_init.c (libfuncs): Add argument to rsa_public_encrypt
	to set no padding.

	* nasl/nasl_crypto2.c (nasl_rsa_public_encrypt): Add no padding
	functionality.

2017-03-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.h (struct host_info): Remove vhosts element.

	* misc/network.c (host_info_init): Remove vhosts parameter.
	(host_init_free): Don't free vhosts element.

	* nasl/nasl.c (init): Adjust function call.

	* src/attack.c (init_host_kb): Get vhosts and vhosts_ip values directly
	from prefs instead of hostinfos.
	(attack_start): Adjust host_info_init() call.

2017-03-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_get_key): Set the SIGTERM handler to _exit in
	forked child case.

2017-03-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/charcnv.c (void strupper_m_ntlmssp, push_ascii_ntlmssp):
	Delete functions.

	* nasl/proto.h (push_ascii_ntlmssp) Remove function prototype.

2017-03-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (nasl_ntlm_response): New variable pass_len
	to be passed to ntlmssp_genauth_ntlm().